--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
         <div class="view">
           <h4 id="output"></h4>
           <form enctype="multipart/form-data" method="POST" action="/api/fileanalyse">
-            <input id="inputfield" type="file" name="upfile">
+            <input id="inputfield" type="file" name="file">
             <input id="button" type="submit" value="Upload">
           </form>
         </div>
